# Custom-Vision

./: CMakeLists.txt  README.md
apriltag_vision_py/: calibration.json  camera.py  config.json  config.py  detector.py  main.py  pose.py  publisher.py  requirements.txt
scripts/: camera_mode_dashboard.py
src/: calibration.cpp  calibration.hpp  config.cpp  config.hpp  detector.cpp  detector.hpp  field_layout.cpp  field_layout.hpp  main.cpp  persistent_config.cpp  persistent_config.hpp  pose.cpp  pose.hpp  publisher.cpp  publisher.hpp  types.hpp  visualize.cpp  visualize.hpp
